fix: entity status 검증 추가에 따른 수정, 오타 수정